Project files/K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsmart-backend
  labels:
    app: shopsmart-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsmart-backend

  template:
    metadata:
      labels:
        app: shopsmart-backend

    spec:
      containers:
      - name: shopsmart-backend

        image: saidivakar/shopsmart-backend:latest

        ports:
        - containerPort: 5100
