Project files/K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: shopsmart-backend
  ports:
    - port: 5100
      targetPort: 5100
