Project files/K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: shopsmart-frontend
  ports:
    - port: 80
      targetPort: 80
